# rtsp2webrtc-rs

./: Cargo.toml  Dockerfile  README.md  build.rs  config.json
.devcontainer/: devcontainer.json
.github/workflows/: cross.yaml  docker.yaml
src/: appcontext.rs  main.rs  rtspclient.rs  streamdef.rs
www/: index.html
